force-app/main/default/objects/BusinessRegisterEntry__c/BusinessRegisterEntry__c.object-meta.xml
<CustomObject>
    <description>As part of our regulatory commitments to the FCA, we must report on the business we have done for customers. This covers recommendations made, the acceptance, and the outcome of any fulfilment. This object will capture this data for reporting purposes.</description>
    <label>Business Register Entry</label>
    <nameField>
        <displayFormat>BR-{0000000}</displayFormat>
        <label>Business Register Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Register Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>