force-app/main/default/objects/BusinessRegisterEntry__c/fields/AccountSource__c.field-meta.xml
<CustomField>
    <fullName>AccountSource__c</fullName>
    <description>The source of this account</description>
    <formula>TEXT(Recommendation__r.Household__r.AccountSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account source</label>
    <type>Text</type>
</CustomField>