force-app/main/default/objects/BusinessRegisterEntry__c/fields/AdviceType__c.field-meta.xml
<CustomField>
    <fullName>AdviceType__c</fullName>
    <description>The advice type of this recommendation</description>
    <formula>Recommendation__r.DestinationLegacy__r.RecordType.Name + &quot; &quot; + Recommendation__r.RecommendationTypeName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommendation type</label>
    <type>Text</type>
</CustomField>