force-app/main/default/objects/BusinessRegisterEntry__c/fields/Adviser__c.field-meta.xml
<CustomField>
    <fullName>Adviser__c</fullName>
    <description>The partner for this client when this recommendation was made</description>
    <label>Adviser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>