force-app/main/default/objects/BusinessRegisterEntry__c/fields/AmountReceived__c.field-meta.xml
<CustomField>
    <fullName>AmountReceived__c</fullName>
    <description>The amount received in the course of fulfilling this recommendation</description>
    <formula>Fulfilment__r.ValueOfFundsReceived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>