force-app/main/default/objects/BusinessRegisterEntry__c/fields/DateAdviceAgreed__c.field-meta.xml
<CustomField>
    <fullName>DateAdviceAgreed__c</fullName>
    <description>The date a decision was made about the recommendation</description>
    <formula>Recommendation__r.DateOfDecision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date advice agreed</label>
    <type>Date</type>
</CustomField>