force-app/main/default/objects/BusinessRegisterEntry__c/fields/DateFundsReceived__c.field-meta.xml
<CustomField>
    <fullName>DateFundsReceived__c</fullName>
    <description>The date funds were received as a result of this recommendation</description>
    <formula>Fulfilment__r.DateFundsReceived__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date funds received</label>
    <type>Date</type>
</CustomField>