force-app/main/default/objects/BusinessRegisterEntry__c/fields/DateOfNextReview__c.field-meta.xml
<CustomField>
    <fullName>DateOfNextReview__c</fullName>
    <description>The date the clients next review is scheduled</description>
    <formula>Recommendation__r.Household__r.FinServ__NextReview__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of next review</label>
    <type>Date</type>
</CustomField>