force-app/main/default/objects/BusinessRegisterEntry__c/fields/DestinationProvider__c.field-meta.xml
<CustomField>
    <fullName>DestinationProvider__c</fullName>
    <description>The provider of the destination for this recommendation</description>
    <formula>Recommendation__r.DestinationLegacy__r.Public_Provider_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination provider</label>
    <type>Text</type>
</CustomField>