force-app/main/default/objects/BusinessRegisterEntry__c/fields/EstimatedRevenueFromInitialFees__c.field-meta.xml
<CustomField>
    <fullName>EstimatedRevenueFromInitialFees__c</fullName>
    <description>The estimated revenue that we would generate from this recommendation, that came from initial fees</description>
    <label>Estimated revenue from initial fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>