force-app/main/default/objects/BusinessRegisterEntry__c/fields/EstimatedRevenueFromTransferFees__c.field-meta.xml
<CustomField>
    <fullName>EstimatedRevenueFromTransferFees__c</fullName>
    <description>The revenue we estimate we&apos;ll receive via transfer fees when implementing this recommendation</description>
    <label>Estimated revenue from transfer fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>