force-app/main/default/objects/BusinessRegisterEntry__c/fields/ExpectedAmount__c.field-meta.xml
<CustomField>
    <fullName>ExpectedAmount__c</fullName>
    <description>The expected amount according to the recommendation</description>
    <formula>Recommendation__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>