force-app/main/default/objects/BusinessRegisterEntry__c/fields/Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The fulfilment which implements the recommendation made for this NBR row</description>
    <label>Fulfilment</label>
    <referenceTo>Fulfilment__c</referenceTo>
    <relationshipLabel>Business Register Entries</relationshipLabel>
    <relationshipName>NewBusinessRegister</relationshipName>
    <type>Lookup</type>
</CustomField>