force-app/main/default/objects/BusinessRegisterEntry__c/fields/PolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyNumber__c</fullName>
    <description>The policy number of the destination product</description>
    <formula>Recommendation__r.DestinationLegacy__r.FinServ__FinancialAccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy number</label>
    <type>Text</type>
</CustomField>