force-app/main/default/objects/BusinessRegisterEntry__c/fields/ReceivedRevenueFromInitialFees__c.field-meta.xml
<CustomField>
    <fullName>ReceivedRevenueFromInitialFees__c</fullName>
    <description>The actual amount received from initial fees</description>
    <label>Revenue received from initial fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>