force-app/main/default/objects/BusinessRegisterEntry__c/fields/Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Recommendation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The recommendation that this new business register row records</description>
    <label>Recommendation</label>
    <referenceTo>Recommendation__c</referenceTo>
    <relationshipLabel>Business Register Entries</relationshipLabel>
    <relationshipName>NewBusinessRegister</relationshipName>
    <type>Lookup</type>
</CustomField>