force-app/main/default/objects/BusinessRegisterEntry__c/fields/RecommendationStatus__c.field-meta.xml
<CustomField>
    <fullName>RecommendationStatus__c</fullName>
    <description>Whether or not the recommendation was taken up or not</description>
    <formula>TEXT(Recommendation__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommendation status</label>
    <type>Text</type>
</CustomField>