force-app/main/default/objects/BusinessRegisterEntry__c/fields/RevenueReceivedFromTransfeFees__c.field-meta.xml
<CustomField>
    <fullName>RevenueReceivedFromTransfeFees__c</fullName>
    <description>The actual amount of transfer fee received</description>
    <label>Revenue received from transfer fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>