force-app/main/default/objects/BusinessRegisterEntry__c/fields/SourceOfFunds__c.field-meta.xml
<CustomField>
    <fullName>SourceOfFunds__c</fullName>
    <description>The source of the funds for this recommendation</description>
    <formula>IF(  Recommendation__r.RecommendationTypeName__c = &quot;External transfer in&quot;, &quot;Ceding provider&quot;, IF( Recommendation__r.RecommendationTypeName__c = &quot;Open product&quot;, &quot;N/A&quot;, IF(  ISPICKVAL(Recommendation__r.PaidBy__c,  &quot;Client&quot;), &quot;Client bank account&quot;, &quot;Employer&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source of funds</label>
    <type>Text</type>
</CustomField>