force-app/main/default/objects/BusinessRegisterEntry__c/fields/SuitabilityMeetingFormat__c.field-meta.xml
<CustomField>
    <fullName>SuitabilityMeetingFormat__c</fullName>
    <description>The format of the suitability meeting</description>
    <formula>IF( ISPICKVAL(Recommendation__r.Advice__r.Suitability_meeting_location__c, &quot;Online&quot;) || ISPICKVAL(Recommendation__r.Advice__r.Suitability_meeting_location__c, &quot;Webex&quot;), &quot;Online&quot;, IF( ISPICKVAL(Recommendation__r.Advice__r.Suitability_meeting_location__c, &quot;N/A&quot;), &quot;Non-presented&quot;, &quot;In person&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suitability meeting format</label>
    <type>Text</type>
</CustomField>