force-app/main/default/objects/BusinessRegisterEntry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recommendation__c</columns>
    <columns>Fulfilment__c</columns>
    <columns>PolicyNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>